# quad-flight-control

./: .gitignore  README.md  flake.nix  pyproject.toml
6dof-sim/: README.md
6dof-sim/examples/: basic_sim.py
6dof-sim/sixdof_sim/: __init__.py  actuators.py  commands.py  control.py  dynamics.py  environment.py  math_utils.py  parameters.py  simulator.py
analysis/: ax_plot_path_follow.py
common/: trajectories.py
examples/: __init__.py  common.py  path_follower_circle.py  path_follower_line.py  path_follower_sinusoid.py  path_follower_zig_zag.py  trajectories.py
flight_test/: path_follow_flight.py
flight_test/old/: exec_path_follow.py  waypoint_follow.py
notebooks/: Untitled.ipynb  waypoint-follow.ipynb
notebooks/.ipynb_checkpoints/: waypoint-follow-checkpoint.ipynb
offboard_control/: path_follower.py  velocity_smoother.py
path_follower/: command_generator.py  config.py  path_follower.py  plan.py  velocity_smoother.py
plots/: plot_ardu_telemetry.py  plot_flight_telemetry.py  plot_sim_telemetry.py  plot_simple_telemetry.py  plot_telemetry.py
quad_flight_control/common/: __init__.py
quad_flight_control/path_follower/: __init__.py  command_generator.py  path_follower.py  plan.py
scripts/: circle_offboard.py  exec_path_follow.py  inspect_circle_rates.py  plot_path_follow_log.py  px4_waypoint_follow.py  sweep_circle.py
sim/: __init__.py  commands.py  config.py  math_utils.py  simulator.py  states.py  telemetry.py
simple_examples/: __init__.py  common.py  path_follower_circle.py  path_follower_line.py  path_follower_sinusoid.py
simple_sim/: __init__.py  config.py  simulator.py  states.py  telemetry.py
sixdof_sim/: __init__.py  actuators.py  commands.py  control.py  parameters.py  simulator.py  states.py  telemetry.py
tests/: test_attitude_control.py  test_attitude_rate_layer.py  test_closed_loop_dynamics.py  test_controller.py  test_controller_midstack.py  test_dynamics.py  test_examples_run.py  test_path_follower.py  test_rate_controller.py  test_simulator.py
(+10 files in other folders)
