[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipympl>=0.9.8",
    "matplotlib>=3.10.7",
    "mavsdk>=3.10.2",
    "mcap>=1.3.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pymavlink>=2.4.49",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "packaging>=23.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.0",
    "jupyterlab>=4.4.9",
]
