# Use setuptools for packaging
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quad-flight-control"
version = "0.1.0"
description = "Tools for quadrotor flight controls and simulation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ipympl>=0.9.8",
    "matplotlib>=3.9.2",
    "mavsdk>=3.10.2",
    "mcap>=1.2.2",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pymavlink>=2.4.49",
    "pytest>=8.3.5",
    "scipy>=1.15.2",
    "packaging>=23.0",
]

[tool.setuptools]
packages = ["sim", "common", "path_follower"]

[project.optional-dependencies]
dev = ["ipykernel>=7.0.0", "jupyterlab>=4.4.0", "ruff>=0.14.2"]
